# Q4-capstone-sapphire

./: .gitignore  README.md  enviornment.txt  pyproject.toml  requirements.txt  vercel.json
Q4-capstone-sapphire/: .gitignore
Q4-capstone-sapphire/net/: admin.py  apps.py  models.py  views.py
Q4-capstone-sapphire/net_user_app/: models.py
Q4-capstone-sapphire/notification/: admin.py  context_processors.py  models.py  urls.py  views.py
Q4-capstone-sapphire/posts/: admin.py  views.py
Q4-capstone-sapphire/reddit_clone/: settings.py  urls.py
Q4-capstone-sapphire/templates/: 404.html  500.html  base.html  forms.html  messages.html  notifications.html
authentication/: forms.py  urls.py  views.py
direct_messages/: admin.py  forms.py  models.py  urls.py  views.py
direct_messages/migrations/: 0001_initial.py
net/: admin.py  forms.py  models.py  urls.py  views.py
net/migrations/: 0001_initial.py  0002_net_moderators.py  0003_auto_20210406_2031.py  0003_auto_20210409_1900.py  0003_auto_20210415_1954.py
net_user_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
net_user_app/migrations/: 0001_initial.py  (+4 more)
notification/: admin.py  context_processors.py  forms.py  models.py  urls.py  utilities.py  views.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
reddit_clone/: requirements.txt  settings.py  urls.py
templates/: 404.html  about.html  base.html  comments.html  forms.html  homepage.html  individual_nets.html  individual_posts.html  messages.html  newnet.html  notifications.html  post_component.html  profile.html  user_messages.html
(+39 files in other folders)
