[tool.poetry]
name = "capstone_sapphire"
version = "0.1.0"
description = ""
authors = ["jeffsimp88 <jdsimpson806@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-mptt = "^0.12.0"
mimesis = "^4.1.3"
Pillow = "^8.2.0"
django-environ = "^0.4.5"
django-allauth = "^0.44.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
